tests/ui/object-lifetime/object-lifetime-default-dyn-binding-nonstatic3.stderr
error[E0228]: cannot deduce the lifetime bound for this trait object type from context
  --> $DIR/object-lifetime-default-dyn-binding-nonstatic3.rs:16:36
   |
LL | fn bar(x: &str) -> &dyn Foo<Item = dyn Bar> { &() }
   |                                    ^^^^^^^
   |
help: please supply an explicit bound
   |
LL | fn bar(x: &str) -> &dyn Foo<Item = dyn Bar + /* 'a */> { &() }
   |                                            ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0228`.
